2/16/09 - #1246, add partical backward compatibility for setting locale
2/16/09 - #1222, add backward compatibility for project.properties
2/13/09 - #249, integrate into PhetBuildGUI, delete old build files
# 1.09.01 (28509) Feb 13, 2009
testing addition of translation-utility to PBG
2/9/09 - #1198, change format what is written to flash-launcher-args.txt, for testing translations
1/6/09 - #1081, update user-visible language names to match PhET website
# 1.09.00 (26682)
> add PhET-assigned language code for Chinese-Taiwan
12/11/08 - #1035, assign a language code for Chinese-Taiwan (tc)
12/3/08 - #249, add buildfile targets for deploying
11/6/08 - see #912, generate Java 1.4 bytecode when creating translation-utility JAR
# 1.08.00 (25822)
> add PhET-assigned language code for Brazilian Portuguese
11/5/08 - #893, assign a language code for Brazilian Portuguese (bp)
11/5/08 - #893, use separate properties for ISO-standard and PhET-assigned language codes
# 1.07.00 (25634)
10/28/08 - [864, comment 1]  fix this problem by using '/' as the path separator for JAR resources on all platforms, not System.getProperty("file.separator")
# 1.06.00 (25624)
10/28/08 - [870] translation utility broken for common strings by [865]
# 1.05.00 (25607)
10/27/08 - [864] Flash translation files are missing the header found in Java translation files
10/27/08 - [865] add sim version number to header of translation files
10/8/08 - eliminated need for PhetApplicationConfig, get everything needed from PhetResources
9/22/08 - center Close button in ExceptionDialog
# 1.04.00 (24643)
9/22/08 - explicitly read and add manifest to test jar for Flash sims, same problem here as Java sims (Unfuddle 720) 
9/22/08 - move shared instance data, interfaces, and utilities to AbstractSimulation
9/22/08 - ignore manifest file when copying jar entries, this causes problems on Mac (Unfuddle 720)
9/22/08 - explicitly read manifest from Java sim jars, use to create JarOutputStream, needed by Windows (Unfuddle 720)